<resources>
    <string name="app_name">A7 DragernesDal</string>
    <!-- Strings related to login and usercreation-->
    <string name="logout_command">logout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Kodeord</string>
    <string name="action_sign_in">Log ind!</string>
    <string name="action_sign_in_short">Log ind!2</string>
    <string name="welcome">"Velkommen %s, til Dragernes Dal!"</string>
    <string name="must_be_filled">Skal udfyldes</string>
    <string name="invalid_username">Fejl i indtastede Email</string>
    <string name="invalid_password">kodeord skal mindst være 6 tegn</string>
    <string name="invalid_password_confirmation">Kordeordne skal være ens!</string>
    <string name="invalid_phone">telefonnummeret skal have 8 cifre</string>
    <string name="invalid_checkbox">Du skal acceptere her, for at oprette en bruger</string>
    <string name="create_profile"><u>Opret profil!</u></string>
    <string name="forgot_password"><u>Glemt kodeord?</u></string>
    <string name="terms_confirmation">Jeg accepterer hermed at min data bliver data bliver brugt i overensstemmelse med VILKÅR OG BETINGELSER</string>
    <string name="login_failed">"Login fejlede"</string>
    <string name="usercreation_failed">"Oprettelse fejlede"</string>
    <string name="usercreation_success">"Bruger med emailen %s blev oprettet!"</string>
    <string name="phone_help">"Dansk tlf, 8 cifre"</string>
    <string name="firstname_help">"Dit fornavn"</string>
    <string name="lastname_help">"Dine andre navne"</string>

    <!-- For nav -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Hjem</string>
    <string name="dragernes_dal">Dragernes Dal</string>
    <string name="fornavn">Fornavn</string>
    <string name="efternavn">Efternavn</string>
    <string name="gentag_kodeord">Gentag Kodeord</string>
    <string name="telefonnummer">Telefonnummer</string>
    <string name="opret">Opret</string>
    <string name="evner">Evner</string>
    <string name="karakter">Karakter</string>
    <string name="magi">Magi</string>
    <string name="inventar">Inventar</string>
    <string name="baggrund">Baggrund</string>
    <string name="v_lg_karakter">Vælg Karakter</string>
    <string name="regelbog">Regelbog</string>
    <string name="event">Event</string>
    <string name="regler">Regler</string>

    <!-- Strings for Character Backgrounds -->
    <string name="baggrundshistorie">Baggrundshistorie</string>
    <string name="dårlige_karaktertræk">Dårlige karaktertræk</string>
    <string name="baggrundtext">Baggrund (max 5000 tegn)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characterName">Navn</string>
    <string name="charcterAge">Alder</string>
    <string name="Name">Navn:</string>
    <string name="Age">Alder:</string>
    <string name="Background">Baggrund:</string>
    <string name="selectRace">Vælg Race</string>
    <string name="opretKarakter">Opret Karakter</string>
    <string name="mainPrefFile">Main_Preferences_File</string>
    <string name="event_info">Event Info</string>
    <string name="currentEventDate">01/01/2021</string>
    <string name="currentEventInfo">Hus med by</string>
    <string name="currentEventAddress">Addresse: Vejnavn 10, Originalby 1234</string>
    <string name="textTime">Kl. 13:00</string>
    <string name="textAttending">Du er tilmeldt</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="admin">Admin</string>
    <string name="opret_evne">Opret Evne</string>
    <string name="rediger_evne">Rediger evne</string>
    <string name="opret_race">Opret race</string>
    <string name="opret_event">Opret event</string>
    <string name="check_ud">Check ud</string>
    <string name="rediger_bruger">Rediger bruger</string>
    <string name="rediger_event">Events</string>
    <string name="rediger_race">Rediger race</string>
    <string name="title_event">Title</string>
    <string name="start_dato">Start Dato</string>
    <string name="slut_dato">Slut Dato</string>
    <string name="address">Adresse</string>
    <string name="information">Information</string>
    <string name="check_ind">Check ind</string>
    <string name="editOrCheckIn">Vil du redigere eller check ind/ud?</string>
    <string name="checkin">Bekræft check ind af:</string>
    <string name="checkout">Bekræft fjernelse af check ind af:</string>
    <string name="checked_ind">Checked ind</string>
    <string name="textLink">https://google.com</string>
    <string name="hyperlink">Event link(s)</string>
    <string name="type">Type:</string>
    <string name="ep">EP:</string>
    <string name="beskrivelse">Beskrivelse</string>
    <string name="racenavn">Racenavn</string>
    <string name="indtast">Indtast</string>
    <string name="afvis">Afvis</string>
</resources>