<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_character_sheet"
            android:title="@string/menu_home" />
        <item android:title="@string/karakter">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@id/nav_char_skill"
                        android:icon="@drawable/ic_rulebook"
                        android:title="@string/evner" />
                    <item
                        android:id="@+id/nav_char_magic"
                        android:icon="@android:drawable/ic_menu_view"
                        android:title="@string/magi" />
                    <item
                        android:id="@+id/nav_char_inventory"
                        android:icon="@android:drawable/ic_dialog_dialer"
                        android:title="@string/inventar" />
                    <item
                        android:id="@+id/nav_char_background"
                        android:icon="@drawable/ic_character_sheet"
                        android:title="@string/baggrund" />
                    <item
                        android:id="@+id/nav_char_select"
                        android:icon="@drawable/ic_profile"
                        android:title="@string/v_lg_karakter" />
                </group>
            </menu>

        </item>
        <item android:title="@string/information">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_rules"
                        android:icon="@drawable/ic_rulebook"
                        android:title="@string/regelbog" />
                    <item
                        android:id="@+id/nav_event"
                        android:icon="@android:drawable/ic_menu_today"
                        android:title="@string/event" />
                </group>
            </menu>
        </item>

    </group>
</menu>